[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Stickman.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Unit/Peasant.gd" type="Script" id=2]
[ext_resource path="res://Assets/units2/human/peasant.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.75, 17.25 )

[node name="Peasant" instance=ExtResource( 1 )]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="0"]
position = Vector2( -16, -16 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
centered = false

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 16, 16 )
shape = SubResource( 1 )

[node name="HP_bar" parent="." index="2"]
margin_left = -1.0
margin_top = -6.0
margin_right = 33.0
margin_bottom = -3.0
value = 100.0

[node name="StandingTimer" type="Timer" parent="." index="3"]

[node name="DamagePos" type="Position2D" parent="." index="4"]
visible = false

[node name="Timer" type="Timer" parent="." index="5"]

[node name="Inventory" type="Node2D" parent="." index="6"]
visible = false

[node name="TimerDie" type="Timer" parent="." index="7"]

[node name="Label" type="Label" parent="." index="8"]
margin_top = -16.0
margin_right = 57.0
margin_bottom = -2.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Peasants"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="StandingTimer" to="." method="_on_StandingTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerDie" to="." method="_on_TimerDie_timeout"]
